# laser-tag-HU

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
Administratie/: Teamcontract Lasertak.docx
Project/: .gitignore  Makefile
Project/src/: .clang-format  main.cpp
Project/src/Statecontroller/: master-task.cpp  master-task.hpp  player-task.cpp  player-task.hpp
Project/src/boundaries/: button-controller.cpp  button-controller.hpp  display-controller.cpp  ir-receive-controller.hpp  ir-send-controller.cpp  ir-send-controller.hpp  keypad-controller.cpp  keypad-controller.hpp  (+2 more)
Solution Architechture/Concurrency diagram/: Objectenlijst.docx
libs/bmptk/: Makefile.inc
src/: main.cpp  wrap-hwlib.cc
src/Statecontroller/: master-task.cpp  master-task.hpp  player-task.cpp  player-task.hpp
src/application-logic/: command.cpp  command.hpp
src/applicationLogic/: Command.cc  Command.hh  command.cpp  command.hpp
src/boundaries/: IRReceiveController.cc  IRReceiveController.hh  button-controller.cpp  button-controller.hpp  button_controller.cpp  display-controller.cpp  display-controller.hpp  ir-controller.cpp  ir-controller.hpp  ir-receive-controller.cpp  ir-receive-controller.hpp  ir-send-controller.cpp  keypad-controller.cpp  keypad-controller.hpp  sound-controller.cpp
src/entities/: Arsenal.cpp  Arsenal.hpp  Weapon.cpp  Weapon.hpp  arsenal.cpp  arsenal.hpp  game-data.cpp  game-data.hpp  weapon.cpp  weapon.hpp
src/interfaces/: i-controller.hpp
src/stateController/: controller.hpp  init-game-controller.cpp  init-game-controller.hpp
(+8 files in other folders)
